--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 .idea/codeStyles/
 .idea/markdown-navigator/
 .idea/markdown-navigator.xml
+.idea/markdown-navigator-enh.xml
 .idea/assetWizardSettings.xml
 .DS_Store
 /build
